--- a/public/style.css
+++ b/public/style.css
@@ -77,6 +77,7 @@ footer {
         border-radius: 1rem;
         color: white;
         font-size: 15px;
+        line-height: 25px;
         text-wrap: nowrap;
         cursor: pointer;
         transition: all 0.3s;
@@ -87,7 +88,7 @@ footer {
         }
 
         img {
-            vertical-align: middle;
+            vertical-align: bottom;
         }
     }
 }
