--- a/public/style.css
+++ b/public/style.css
@@ -15,9 +15,23 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
     gap: 40px;
     width: 100%;
+
+    > div {
+        text-align: center;
+
+        > div {
+            display: flex;
+            gap: 0.8rem;
+            justify-content: space-around;
+            flex-direction: column;
+            width: 100%;
+            p{
+                margin: 0 auto;
+            }
+        }
+    }
 
     a.feature {
         color: white;
@@ -38,6 +52,7 @@ main {
             text-wrap: balance;
             height: min(25vh, 250px);
             width: min(70vw, 350px);
+            margin: 0 auto;
 
             &:hover {
                 transform: scale(1.05);
@@ -70,26 +85,47 @@ footer {
         max-width: 800px;
     }
 
-    a button {
-        background: #fa4454;
-        border: 0.2rem solid #fa4454;
-        padding: 0.5rem;
-        border-radius: 1rem;
-        color: white;
-        font-size: 15px;
-        line-height: 25px;
-        text-wrap: nowrap;
-        cursor: pointer;
-        transition: all 0.3s;
+    div#footer-links {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0.4rem;
+        margin-left: auto;
+    }
+}
 
-        &:hover {
-            background: white;
-            color: black;
-        }
+a button {
+    background: #fa4454;
+    border: 0.2rem solid #fa4454;
+    padding: 0.5rem;
+    border-radius: 1rem;
+    color: white;
+    font-size: 15px;
+    line-height: 25px;
+    text-wrap: nowrap;
+    cursor: pointer;
+    transition: all 0.3s;
 
-        img {
-            vertical-align: bottom;
+    &:hover {
+        background: white;
+        color: black;
+
+        img:not(.no-invert) {
+            filter: invert(1);
         }
+    }
+
+    img {
+        vertical-align: bottom;
+    }
+}
+
+a.disabled-link {
+    pointer-events: none;
+    cursor: none;
+    opacity: 0.5;
+
+    button {
+        cursor: none;
     }
 }
 
@@ -98,4 +134,15 @@ footer {
         visibility: hidden;
         display: none;
     }
+}
+
+.highlight{
+    color: #fa4454;
+    font-weight: bolder;
+}
+
+.note{
+    text-wrap: wrap;
+    text-align: center;
+    text-overflow: ellipsis;
 }
