--- a/public/style.css
+++ b/public/style.css
@@ -21,7 +21,7 @@ header {
 
 main {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     justify-content: center;
     gap: 60px;
     width: 90%;
