--- a/public/style.css
+++ b/public/style.css
@@ -78,6 +78,39 @@ main {
             }
         }
     }
+
+    a.sponsor {
+        img {
+            width: 60%;
+            height: auto;
+            margin: 0 auto;
+        }
+    }
+
+    img.info-icon {
+        vertical-align: top;
+        cursor: pointer;
+    }
+
+    div.tooltip .tooltip-info {
+        visibility: hidden;
+        width: 240px;
+        background-color: black;
+        text-align: center;
+        border-radius: 6px;
+        padding: 5px 0;
+        position: absolute;
+        z-index: 1;
+        font-size: 1.2rem;
+
+        a {
+            color: #fa4454;
+        }
+    }
+
+    div.tooltip:hover .tooltip-info {
+        visibility: visible;
+    }
 }
 
 footer {
@@ -158,7 +191,7 @@ a.disabled-link {
     text-overflow: ellipsis;
     max-width: 450px;
 
-    a{
+    a {
         text-decoration: none;
     }
 }
