Add Sponsor Blast.TV

--- a/public/style.css
+++ b/public/style.css
@@ -83,7 +83,7 @@ main {
         img {
             width: 60%;
             height: auto;
-            margin: 0 auto;
+            margin: 20px auto;
         }
     }
 
