--- a/public/style.css
+++ b/public/style.css
@@ -79,37 +79,19 @@ main {
         }
     }
 
-    a.sponsor {
-        img {
-            width: 60%;
+    div.sponsor-box {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        gap: 20px;
+        justify-content: space-around;
+
+        a.sponsor img {
+            max-width: 60%;
+            width: auto;
             height: auto;
-            margin: 20px auto;
+            max-height: 40px;
         }
-    }
-
-    img.info-icon {
-        vertical-align: top;
-        cursor: pointer;
-    }
-
-    div.tooltip .tooltip-info {
-        visibility: hidden;
-        width: 240px;
-        background-color: black;
-        text-align: center;
-        border-radius: 6px;
-        padding: 5px 0;
-        position: absolute;
-        z-index: 1;
-        font-size: 1.2rem;
-
-        a {
-            color: #fa4454;
-        }
-    }
-
-    div.tooltip:hover .tooltip-info {
-        visibility: visible;
     }
 }
 
@@ -188,6 +170,7 @@ a.disabled-link {
 .note {
     text-wrap: balance;
     text-align: center;
+    margin: 0 auto;
     text-overflow: ellipsis;
     max-width: 450px;
 
