Update Deadlock API section in index.html and adjust layout in style.css

--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ body {
 
 header {
     text-align: center;
-    height: 10vh;
+    height: 25vh;
 }
 
 * {
@@ -20,8 +20,8 @@ header {
 }
 
 main {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 60px;
     width: 90%;
@@ -62,6 +62,8 @@ main {
             text-wrap: balance;
             height: min(25vh, 250px);
             width: min(70vw, 350px);
+            min-height: 250px;
+            min-width: 350px;
             margin: 0 auto;
 
             &:hover {
